@@ -25,8 +25,10 @@ import java.io.File;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
+import java.util.Set;
 import java.util.UUID;
 
 import org.olat.basesecurity.IdentityRef;
@@ -39,8 +41,8 @@ import org.olat.core.util.vfs.VFSContainer;
 import org.olat.core.util.vfs.VFSItem;
 import org.olat.core.util.vfs.VFSLeaf;
 import org.olat.core.util.vfs.VFSManager;
+import org.olat.modules.ceditor.manager.PageToTaxonomyCompetenceDAO;
 import org.olat.modules.curriculum.manager.CurriculumElementToTaxonomyLevelDAO;
-import org.olat.modules.portfolio.manager.PortfolioPageToTaxonomyCompetenceDAO;
 import org.olat.modules.quality.manager.QualityDataCollectionDAO;
 import org.olat.modules.taxonomy.Taxonomy;
 import org.olat.modules.taxonomy.TaxonomyCompetence;
@@ -88,17 +90,17 @@ public class TaxonomyServiceImpl implements TaxonomyService, UserDataDeletable {
 	@Autowired
 	private TaxonomyCompetenceDAO taxonomyCompetenceDao;
 	@Autowired
+	private QualityDataCollectionDAO dataCollectionDao;
+	@Autowired
 	private TaxonomyLevelTypeToTypeDAO taxonomyLevelTypeToTypeDao;
+	@Autowired
+	private PageToTaxonomyCompetenceDAO pageToTaxonomyCompetenceDAO;
 	@Autowired
 	private TaxonomyCompetenceAuditLogDAO taxonomyCompetenceAuditLogDao;
 	@Autowired
 	private RepositoryEntryToTaxonomyLevelDAO repositoryEntryToTaxonomyLevelDao;
 	@Autowired
-	private QualityDataCollectionDAO dataCollectionDao;
-	@Autowired
 	private CurriculumElementToTaxonomyLevelDAO curriculumElementToTaxonomyLevelDao;
-	@Autowired
-	private PortfolioPageToTaxonomyCompetenceDAO portfolioPageToTaxonomyCompetenceDAO;
 	
 	@Override
 	public Taxonomy createTaxonomy(String identifier, String displayName, String description, String externalId) {
@@ -149,13 +151,19 @@ public class TaxonomyServiceImpl implements TaxonomyService, UserDataDeletable {
 
 	@Override
 	public List<TaxonomyLevel> getTaxonomyLevels(TaxonomyRef ref) {
-		Collection<? extends TaxonomyRef> refs= ref != null? Collections.singletonList(ref): Collections.emptyList();
+		Collection<? extends TaxonomyRef> refs= ref != null? List.of(ref): List.of();
 		return taxonomyLevelDao.getLevels(refs);
 	}
 	
 	@Override
 	public List<TaxonomyLevel> getTaxonomyLevels(Collection<? extends TaxonomyRef> refs) {
 		return taxonomyLevelDao.getLevels(refs);
+	}
+	
+	@Override
+	public Set<TaxonomyLevel> getTaxonomyLevelsAsSet(Collection<? extends TaxonomyRef> refs) {
+		List<TaxonomyLevel> levels = getTaxonomyLevels(refs);
+		return new HashSet<>(levels);
 	}
 
 	@Override
@@ -342,7 +350,7 @@ public class TaxonomyServiceImpl implements TaxonomyService, UserDataDeletable {
 	
 	public void checkLevelTypeCompetences(TaxonomyLevelType levelType) {
 		if (!levelType.isAllowedAsCompetence()) {			
-			portfolioPageToTaxonomyCompetenceDAO.deleteRelationsByLevelType(levelType);
+			pageToTaxonomyCompetenceDAO.deleteRelationsByLevelType(levelType);
 		}
 	}
 
@@ -452,7 +460,7 @@ public class TaxonomyServiceImpl implements TaxonomyService, UserDataDeletable {
 
 	@Override
 	public void removeTaxonomyLevelCompetence(TaxonomyCompetence competence) {
-		portfolioPageToTaxonomyCompetenceDAO.deleteRelation(competence);
+		pageToTaxonomyCompetenceDAO.deleteRelation(competence);
 		taxonomyCompetenceDao.deleteCompetence(competence);
 	}
 
